Controladores, repositorios y servicios añadidos

--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.trabajoFinal</groupId>
-	<artifactId>GustavioBackEnd</artifactId>
+	<artifactId>GameVerseBackEnd</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>GustavioBackEnd</name>
+	<name>GameVerseBackEnd</name>
 	<description>Demo project for Spring Boot</description>
 	<url/>
 	<licenses>
