--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
 services:
   db:
     image: mysql:latest
-    container_name: gustavioDB
+    container_name: gameverseDB
     environment:
       MYSQL_ROOT_PASSWORD: 12345  # Contraseña root
-      MYSQL_DATABASE: gustavio
+      MYSQL_DATABASE: gameverse
       MYSQL_USER: alvaro
       MYSQL_PASSWORD: 12345
     ports:
@@ -16,7 +16,7 @@ services:
 
   phpmyadmin:
     image: phpmyadmin/phpmyadmin:latest
-    container_name: phpmyadmin_gustavio
+    container_name: phpmyadmin_gameverse
     environment:
       PMA_HOST: db
       MYSQL_ROOT_PASSWORD: 12345  # Contraseña root para conectar phpMyAdmin
