--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.application.name=GustavioBackEnd
+spring.application.name=GameVerseBackEnd
 # Configuración para conectarnos a la base de datos
-spring.datasource.url=jdbc:mysql://localhost:3306/gustavio
+spring.datasource.url=jdbc:mysql://localhost:3306/gameverse
 spring.datasource.username=root
 spring.datasource.password=12345
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
